--- a/src/app/components/ContentSection/ContentSection.module.css
+++ b/src/app/components/ContentSection/ContentSection.module.css
@@ -18,7 +18,7 @@
     flex-direction: row;
     justify-content: space-between;
     margin-top: 30px;
-    
+   
   }
   
   .heading {
@@ -63,9 +63,20 @@
   .divider {
     height: 1px;
     background-color: #000000;
-    margin: 4rem 0;
+    margin-top: 30rem ;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20PX;
   }
+
+  .divider video{
+   border-radius: 25px;
+   
+  }
+
   
   .footer {
     text-align: center;
